--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,58 @@ dist
 dist-ssr
 *.local
 count.txt
+
+# Environment and secrets
 .env
+.env.*
+.env.local
+.env.*.local
+*.pem
+*.key
+*.crt
+*.p12
+secrets/
+credentials.json
+service-account*.json
+
+# Build outputs
 .nitro
 .tanstack
 .wrangler
 .output
 .vinxi
+
+# Application data
 todos.json
+.brain-dump-context.md
+*.db
+*.db-shm
+*.db-wal
+*.sqlite
+*.sqlite3
+
+# Plan and progress files
+plans/prd.json
+plans/progress.txt
+
+# IDE and editor
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+.nyc_output/
+playwright-report/
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
