--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "brain-dumpy",
   "private": true,
   "type": "module",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "better-sqlite3"
+    ]
+  },
+  "bin": {
+    "brain-dump": "./cli/brain-dump.ts"
+  },
   "scripts": {
-    "dev": "vite dev --port 3000",
+    "brain-dump": "npx tsx cli/brain-dump.ts",
+    "dev": "vite dev --port 4242",
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
@@ -13,14 +22,22 @@
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write .",
     "check": "pnpm type-check && pnpm lint && pnpm test",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "ralph:build-sandbox": "docker build -t brain-dumpy-ralph-sandbox:latest -f docker/ralph-sandbox.Dockerfile docker/"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
@@ -37,6 +54,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.57.0",
     "@tanstack/devtools-vite": "^0.3.11",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
@@ -52,6 +70,7 @@
     "eslint-plugin-react-refresh": "^0.4.26",
     "jsdom": "^27.0.0",
     "prettier": "^3.7.4",
+    "tsx": "^4.21.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.52.0",
     "vite": "^7.1.7",
