--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "better-sqlite3": "^12.5.0"
+    "better-sqlite3": "^12.5.0",
+    "zod": "^3.24.0"
   }
 }
