--- a/compose.yaml
+++ b/compose.yaml
@@ -1,7 +1,7 @@
 services:
-  brain-dumpy:
+  brain-dump:
     build: .
-    container_name: brain-dumpy
+    container_name: brain-dump
     ports:
       - "4242:4242"
     volumes:
