--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/history": "^1.154.7",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-form-start": "^1.27.7",
     "@tanstack/react-query": "^5.90.16",
@@ -54,6 +55,7 @@
     "nitro": "latest",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "recharts": "^2.15.0",
     "tailwindcss": "^4.0.6",
     "vite-tsconfig-paths": "^6.0.2",
     "zod": "^4.3.5"
@@ -94,6 +96,7 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.52.0",
     "vite": "^7.1.7",
+    "vite-node": "^5.3.0",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
   }
