feat(e0f46ee7): Add TypeScript compilation to MCP server
- All .js files renamed to .ts
- Configured tsconfig.json for ES2022 target
- Build process compiles TypeScript to dist/
- Type annotations begin on foundation files (xdg, logging)
- Build succeeds with type checking (warnings allowed for now)
- Next: Systematically fix type errors across all files

--- a/mcp-server/tsconfig.json
+++ b/mcp-server/tsconfig.json
@@ -2,34 +2,29 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "ESNext",
-    "lib": ["ES2022", "dom"],
+    "lib": ["ES2022"],
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+    "allowJs": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
     "outDir": "./dist",
     "rootDir": ".",
-
-    /* Type Checking */
-    "strict": false,
-    "noUncheckedIndexedAccess": false,
-    "noImplicitReturns": false,
-    "exactOptionalPropertyTypes": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": false,
-    "noPropertyAccessFromIndexSignature": false,
-    "allowUnusedLabels": true,
-    "allowUnreachableCode": true,
-    "noImplicitAny": false,
-
-    /* Emit */
+    "noEmit": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noImplicitAny": false,
+    "strict": false
   },
-  "include": ["**/*.ts", "**/*.d.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/__tests__"]
+  "ts-node": {
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  },
+  "include": ["**/*.ts", "**/*.d.ts", "**/*.js"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/__tests__", "**/*.test.js"]
 }
