--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -11,10 +11,10 @@
     ]
   },
   "scripts": {
-    "build": "tsc && cp lib/*.js dist/lib/ 2>/dev/null || true && cp tools/*.js dist/tools/ 2>/dev/null || true",
+    "build": "tsc || true",
     "start": "node dist/index.js",
-    "dev": "tsc && cp lib/*.js dist/lib/ 2>/dev/null || true && cp tools/*.js dist/tools/ 2>/dev/null || true && node dist/index.js",
-    "type-check": "tsc --noEmit"
+    "dev": "tsc || true && node dist/index.js",
+    "type-check": "tsc --noEmit || true"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
