fix: MCP server dist paths, auto-build, cross-platform compat, and type errors
The TypeScript migration changed the MCP server entry point to dist/index.js
but all IDE configs, setup scripts, and docs still referenced the source
mcp-server/index.js. Since some lib files only exist as TypeScript, the MCP
server crashed with ERR_MODULE_NOT_FOUND on startup, silently breaking all
ticket updates, comments, and metrics in worktrees and new installs.

Build & install:
- Add build:mcp script and postinstall hook to root package.json
- pnpm install now auto-builds the MCP server

Type checking:
- Exclude mcp-server/ from root tsconfig (it has its own with strict: false)
- Add missing enableContextAwareToolFiltering and defaultToolMode to Settings
  interface, form defaults, and mock factory
- Resolves all 994 TypeScript errors (951 from mcp-server strict mismatch,
  43 from missing new settings fields)

IDE configs & setup scripts:
- Update .vscode/mcp.json, .cursor/mcp.json, .opencode/opencode.json
- Update setup-claude-code.sh, setup-cursor.sh, setup-vscode.sh, setup-opencode.sh
- Fix cross-platform sed -i in setup-claude-code.sh (macOS vs Linux)

New fix-mcp-server-path.sh:
- Auto-builds MCP server if dist/ is missing
- Fixes all IDE configs (Claude Code, VS Code, Cursor)
- Cross-platform sed helper for macOS/Linux

Documentation:
- Update 14 docs files to reference dist/index.js
- Update test expectations in cross-environment and setup-vscode tests

---

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "brain-dump": "npx tsx cli/brain-dump.ts",
     "dev": "vite dev --port 4242",
     "dev:v2": "vite dev --port 4243",
-    "build": "vite build",
+    "build": "vite build && pnpm build:mcp",
+    "build:mcp": "tsc -p mcp-server/tsconfig.json",
     "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -32,6 +33,7 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "ralph:build-sandbox": "docker build -t brain-dump-ralph-sandbox:latest -f docker/ralph-sandbox.Dockerfile docker/",
+    "postinstall": "pnpm build:mcp",
     "prepare": "husky"
   },
   "dependencies": {
