--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "better-sqlite3": "^12.5.0",
     "drizzle-orm": "^0.45.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.561.0",
     "nitro": "latest",
     "react": "^19.2.0",
